fix for blue icon yellow background alignment issue

--- a/node-app/src/views/core/components/content/container/style.scss
+++ b/node-app/src/views/core/components/content/container/style.scss
@@ -1253,7 +1253,7 @@ ul {
             margin-bottom:62px;    
         }
     }.col-sm-4:last-child{ //add 22px padding to last cell inorder to have all cta's equal length apart
-        .yellow-icon-blue-background, .cta-three-column-wrapper, .yellow-icon-grey-background, .blue-icon-yellow-background {
+        .yellow-icon-blue-background, .cta-three-column-wrapper, .yellow-icon-grey-background {
             margin-bottom: -18px;
         }
     }
